# live-class-diagram-ext

./: PROJECT_PLAN.md
.github/workflows/: ci.yml  release.yml
live-class-diagram/: .gitignore  CHANGELOG.md  LICENSE  README.md  esbuild.js  eslint.config.mjs  extension.js  package-lock.json  package.json
live-class-diagram/scripts/: build-engine.js
live-class-diagram/src/: customEditor.js  diagramPanel.js  engineProcess.js  placeholder.js
live-class-diagram/webview-src/: export.js  layout.js  main.js  model.js  render.js  style.css
rust-engine/: Cargo.toml
rust-engine/src/: main.rs  model.rs  relationships.rs  scanner.rs  watcher.rs
rust-engine/src/languages/: csharp.rs  ecma.rs  java.rs  mod.rs  php.rs  python.rs
