[package]
name = "rust-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ignore = "0.4.27"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tree-sitter = "0.26.10"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.27.0"
